Feature: Added Homepage, Profile Info , Solved : Issues Related to Routing

--- a/BookManagementSystemFrontend/src/app/authentication/login/login.component.scss
+++ b/BookManagementSystemFrontend/src/app/authentication/login/login.component.scss
@@ -21,3 +21,9 @@
     background-color: #fff;
     color: #1e79d2 !important;
   }
+
+
+  .btn-primary {
+    background: linear-gradient(90deg, #1e79d2, #1e79d4c2, #1e7ad681); 
+      border-color: #72b6ffce;
+  }
