--- a/BookManagementSystemFrontend/src/app/authentication/login/login.component.html
+++ b/BookManagementSystemFrontend/src/app/authentication/login/login.component.html
@@ -17,7 +17,7 @@
           </div>
           <button type="submit" class="btn btn-primary btn-outline-primary w-100 mt-3">Login</button>
           <div class="text-center mt-3 mb-5">
-            <a [routerLink]="['/signup']" class="text-white d-flex justify-content-end">Don't have an account? Sign up</a>
+            <a [routerLink]="['/authentication/signup']" class="text-white d-flex justify-content-end">Don't have an account? Sign up</a>
           </div>
         </form>
       </div>
