--- a/BookManagementSystemFrontend/src/app/authentication/signup/signup.component.html
+++ b/BookManagementSystemFrontend/src/app/authentication/signup/signup.component.html
@@ -26,7 +26,7 @@
         <!-- Role -->
         <div class="form-group">
           <label for="role">Role</label>
-          <select formControlName="role" class="form-control" id="role">
+          <select formControlName="role" class="form-control bg-dark" id="role">
             <option value="">Select role</option>
             <option *ngFor="let role of roles" [value]="[role | lowercase]">{{ role }}</option>
           </select>
@@ -47,7 +47,7 @@
   
         <button type="submit" class="btn btn-primary w-100 mt-3">Register</button>
         <div class="text-center mt-3 mb-5">
-          <a [routerLink]="['/login']" class="text-white d-flex justify-content-end">Already a user? Login</a>
+          <a [routerLink]="['/authentication/login']" class="text-white d-flex justify-content-end">Already a user? Login</a>
         </div>
       </form>
     </div>
