--- a/BookManagementSystemFrontend/src/app/authentication/signup/signup.component.scss
+++ b/BookManagementSystemFrontend/src/app/authentication/signup/signup.component.scss
@@ -31,3 +31,8 @@
     background-color: black !important;
     color: white !important;
   }
+
+  .btn-primary {
+    background: linear-gradient(90deg, #1e79d2, #1e79d4c2, #1e7ad681); 
+      border-color: #72b6ffce;
+  }
