--- a/BookManagementSystemFrontend/src/app/layouts/header/header.component.html
+++ b/BookManagementSystemFrontend/src/app/layouts/header/header.component.html
@@ -29,10 +29,10 @@
           <div>
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" routerLink="/homepage" routerLinkActive="active">Home</a>
+                <a class="nav-link" routerLink="/pages/home" routerLinkActive="active">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/user-profile" routerLinkActive="active">Profile</a>
+                <a class="nav-link" routerLink="/pages/profile" routerLinkActive="active">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="/taskManager" routerLinkActive="active">Task Manager</a>
