--- a/BookManagementSystemFrontend/src/app/layouts/header/header.component.scss
+++ b/BookManagementSystemFrontend/src/app/layouts/header/header.component.scss
@@ -68,3 +68,8 @@
     background-color: #72b6ff; /* Set background color of the icon */
 
   }
+
+  .btn-primary {
+    background: linear-gradient(90deg, #1e79d2, #1e79d4c2, #1e7ad681); 
+      border-color: #72b6ffce;
+  }
